--- a/i_papers.html
+++ b/i_papers.html
@@ -53,8 +53,14 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik, and Michael Rabbat<br>
+          <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2204.13169">arXiv</a>] [code: FedShuffle] <br>
+          <br>
+
           [186] Konstantin Mishchenko, Grigory Malinovsky, Sebastian Stich and Peter Richtárik<br>
-          <b>ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!</b><br>
+          <b>ProxSkip: Yes! Local gradient steps provably lead to communication acceleration! Finally!</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
           <br>
