--- a/i_talks.html
+++ b/i_talks.html
@@ -100,7 +100,7 @@ PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="ht
 PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria, May 30-June 3, 2022 (invited)
 </p>
 
-<p> Workshop on Stochastic Numerics, Statistical Learning, Optimization, Approximations, with Applications. KAUST, Saudi Arabia, May 15-28, 2022 (invited)
+<p> <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">Stochastic Numerics and Statistical Learning: Theory and Applications Workshop,</a> KAUST, Saudi Arabia, May 15-28, 2022 (invited)
 </p>
 
 <p> <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
