--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
 
           <h1> Prepared in 2022 </h1>
 
-          [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik, and Michael Rabbat<br>
+          [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2204.13169">arXiv</a>] [code: FedShuffle] <br>
