--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ communication acceleration.
 <br>
 <br>
 
-The workshop a virtual meeting; anyone can join via Zoom. I am looking forward to listening to many interesting talks, including one
+The workshop is a virtual meeting; anyone can join via Zoom. I am looking forward to listening to many interesting talks, including one
 by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
 <br>
 
