update EF-BV paper

--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,12 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [188] Laurent Condat, Kai Yi and Peter Richtárik<br>
+          <b>EF-BV: A unified theory of error feedback and variance reduction mechanisms for biased and unbiased compression in distributed optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2205.04180">arXiv</a>] [code: EF-BV] <br>
+          <br>
+
           [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
