--- a/index.html
+++ b/index.html
@@ -76,6 +76,68 @@ In distributed or federated optimization and learning, communication between the
 
 
 
+
+
+<h3>May 10, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2205.03914">
+"Random Reshuffling with Variance Reduction: New Analysis and Better Rates"</a> -
+joint work with <a href="">Grigory Malinovsky</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Random Reshuffling (RR), which is a variant of Stochastic Gradient Descent (SGD) employing sampling without replacement, is an immensely popular method for training supervised machine learning models via empirical risk minimization. Due to its superior practical performance, it is embedded and often set as default in standard machine learning software. Under the name FedRR, this method was recently shown to be applicable to federated learning (Mishchenko et al.,2021), with superior performance when compared to common baselines such as Local SGD. Inspired by this development, we design three new algorithms to improve FedRR further: compressed FedRR and two variance reduced extensions: one for taming the variance coming from shuffling and the other for taming the variance due to compression. The variance reduction mechanism for compression allows us to eliminate dependence on the compression parameter, and applying additional controlled linear perturbations for Random Reshuffling, introduced by Malinovsky et al.(2021) helps to eliminate variance at the optimum. We provide the first analysis of compressed local methods under standard assumptions without bounded gradient assumptions and for heterogeneous data, overcoming the limitations of the compression operator. We corroborate our theoretical results with experiments on synthetic and real data sets.
+</i>
+<br>
+
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>May 6, 2022</h3>
+
+<h1>ICML 2022: The Adventures of an Area Chair </h1>
+
+As an Area Chair, doing metareviews for ICML this year was harder for me than ever. First, we had a new two-phase system. This just meant more work
+for me. Instead of making one decision, I was supposed to  make two decisions on all papers. Might sound good in theory, as the idea perhaps was to reject
+many (not good enough) papers after phase one, which would save reviewer assets that could then be used to provide higher quality reviews in phase 2. At least
+in my case, I did not perceive any advantage, any increase in review quality.  Second, more reviewers than ever before, again at least in my case, simply
+did not  submit reviews. Third, when I reached out to emergency reviewers to save the day, the automated email sent by CMT mentioned an incorrect
+deadline that made the reviewers simply miss the actual deadline. I was not aware of it as I do not get copies of such automated emails. I talked to
+the Program Chairs when I found out the hard way, and they were not aware of this either. Some pesky CMT setting no one knew the purpose of was to blame.
+Fourth, while reviewers provided score for all papers, as it usual, these scores were hidden from authors and me! So, ACs were treated as simpletons who
+can't properly judge a paper if besides the review itself, they are told what the reviewers think about a paper via a numerical score. I used to read the
+reviews carefully, and the numeric score provided an additional signal. Sometimes a score that is too high, when combined with a weak/bad verbal justification,
+helped me to decide that I shiould simply just ignore the review. Now I had the text to go by only. Finally, I was just asked by the PCs to assign
+scores to 8 our of 90 reviews I received for which I allegedly failed to do so (Area Chairs evaluate each review as either exceeding, meeting or failing
+the expectations, which I think is appropriate). However, these 8 reviews I never received. They were not submitted. And CMT does not allow me to assign an
+score to  a missing review. So, the PCs again did not quite know what's going on. In general, I had the feeling the ICML was run in an unusually bad manner
+this year. This is sad, since I know the PCs had the best of intentions to improve the notoriously problematic system of the past. The lesson from this for me is:
+we either adopt small, step-by-step changes and spread them across a number of years, or when attempting a revolution, much more thinking and preparation is
+needed.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>April 27, 2022</h3>
 
 <h1>New Paper</h1>
