--- a/index.html
+++ b/index.html
@@ -122,11 +122,12 @@ can't properly judge a paper if besides the review itself, they are told what th
 reviews carefully, and the numeric score provided an additional signal. Sometimes a score that is too high, when combined with a weak/bad verbal justification,
 helped me to decide that I shiould simply just ignore the review. Now I had the text to go by only. Finally, I was just asked by the PCs to assign
 scores to 8 our of 90 reviews I received for which I allegedly failed to do so (Area Chairs evaluate each review as either exceeding, meeting or failing
-the expectations, which I think is appropriate). However, these 8 reviews I never received. They were not submitted. And CMT does not allow me to assign an
-score to  a missing review. So, the PCs again did not quite know what's going on. In general, I had the feeling the ICML was run in an unusually bad manner
-this year. This is sad, since I know the PCs had the best of intentions to improve the notoriously problematic system of the past. The lesson from this for me is:
-we either adopt small, step-by-step changes and spread them across a number of years, or when attempting a revolution, much more thinking and preparation is
-needed.
+the expectations, which I think is appropriate). However, these 8 reviews I never received. They were not submitted. And CMT does not allow me to assign a
+score to  a missing review. So, the PCs again did not quite know what's going on. It's hard to blame them though - I understand CMT is not an easy system to run,
+and the PCs change every year and need to learn how the backend works... In general, I had the feeling the ICML was run in an unusually unfortunate manner
+this year. This is a bit sad, since I know the PCs had the best of intentions to improve the notoriously problematic system of the past. The lesson from this
+for me is: we either adopt small, step-by-step changes and spread them across a number of years, or when attempting a revolution, much more thinking and
+preparation is needed. In retrospect, it would have been much better to just run ICML on OpenReview this year.
 <br>
 
 
