--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ In distributed or federated optimization and learning, communication between the
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2205.03914">
 "Random Reshuffling with Variance Reduction: New Analysis and Better Rates"</a> -
-joint work with <a href="">Grigory Malinovsky</a>.
+joint work with <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>.
 
 <br>
 <br>
