--- a/i_papers.html
+++ b/i_papers.html
@@ -60,7 +60,7 @@
           <br>
 
           [188] Grigory Malinovsky and Peter Richtárik<br>
-          <b>Random reshuffling with variancn reduction: New analysis and better rates</b><br>
+          <b>Federated random reshuffling with compression and variance reduction</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2205.03914">arXiv</a>] [code: FedCRR, FedCRR-VR, FedCRR-VR-2] <br>
           <br>
