--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ In distributed or federated optimization and learning, communication between the
 
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2205.03914">
-"Random Reshuffling with Variance Reduction: New Analysis and Better Rates"</a> -
+"Federated Random Reshuffling with Compression and Variance Reduction"</a> -
 joint work with <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>.
 
 <br>
@@ -106,36 +106,7 @@ Random Reshuffling (RR), which is a variant of Stochastic Gradient Descent (SGD)
 
 
 
-<h3>May 6, 2022</h3>
 
-<h1>ICML 2022: The Adventures of an Area Chair </h1>
-
-As an Area Chair, doing metareviews for ICML this year was harder for me than ever. First, we had a new two-phase system. This just meant more work
-for me. Instead of making one decision, I was supposed to  make two decisions on all papers. Might sound good in theory, as the idea perhaps was to reject
-many (not good enough) papers after phase one, which would save reviewer assets that could then be used to provide higher quality reviews in phase 2. At least
-in my case, I did not perceive any advantage, any increase in review quality.  Second, more reviewers than ever before, again at least in my case, simply
-did not  submit reviews. Third, when I reached out to emergency reviewers to save the day, the automated email sent by CMT mentioned an incorrect
-deadline that made the reviewers simply miss the actual deadline. I was not aware of it as I do not get copies of such automated emails. I talked to
-the Program Chairs when I found out the hard way, and they were not aware of this either. Some pesky CMT setting no one knew the purpose of was to blame.
-Fourth, while reviewers provided score for all papers, as it usual, these scores were hidden from authors and me! So, ACs were treated as simpletons who
-can't properly judge a paper if besides the review itself, they are told what the reviewers think about a paper via a numerical score. I used to read the
-reviews carefully, and the numeric score provided an additional signal. Sometimes a score that is too high, when combined with a weak/bad verbal justification,
-helped me to decide that I shiould simply just ignore the review. Now I had the text to go by only. Finally, I was just asked by the PCs to assign
-scores to 8 our of 90 reviews I received for which I allegedly failed to do so (Area Chairs evaluate each review as either exceeding, meeting or failing
-the expectations, which I think is appropriate). However, these 8 reviews I never received. They were not submitted. And CMT does not allow me to assign a
-score to  a missing review. So, the PCs again did not quite know what's going on. It's hard to blame them though - I understand CMT is not an easy system to run,
-and the PCs change every year and need to learn how the backend works... In general, I had the feeling the ICML was run in an unusually unfortunate manner
-this year. This is a bit sad, since I know the PCs had the best of intentions to improve the notoriously problematic system of the past. The lesson from this
-for me is: we either adopt small, step-by-step changes and spread them across a number of years, or when attempting a revolution, much more thinking and
-preparation is needed. In retrospect, it would have been much better to just run ICML on OpenReview this year.
-<br>
-
-
-<br>
-<br>
-<img alt="" src="imgs/fancy-line.png" width="196" height="36">
-<br>
-<br>
 
 
 
