--- a/i_papers.html
+++ b/i_papers.html
@@ -65,7 +65,6 @@
           [<a href="https://arxiv.org/abs/2205.03914">arXiv</a>] [code: FedCRR, FedCRR-VR, FedCRR-VR-2] <br>
           <br>
 
-
           [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
@@ -75,7 +74,7 @@
           [186] Konstantin Mishchenko, Grigory Malinovsky, Sebastian Stich and Peter Richtárik<br>
           <b>ProxSkip: Yes! Local gradient steps provably lead to communication acceleration! Finally!</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
+          [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">71 min video</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
           <br>
 
           [185] Dmitry Kovalev, Aleksandr Beznosikov, Abdurakhmon Sadiev, Michael Persiianov, Peter Richtárik and Alexander Gasnikov<br>
