--- a/i_teaching.html
+++ b/i_teaching.html
@@ -94,6 +94,11 @@ If you are from FMFI UK, register for the course via <a href="https://piazza.com
 Otherwise, I will register you manually once you send an email to me.
 </li>
 
+<li>
+390015 KU VGSCO: <a href="https://ufind.univie.ac.at/en/course.html?lv=390015&semester=2022S">Stochastic Gradient Descent Methods</a> (2022S), University of
+Vienna, Austria, May 30-June 3, 2022
+</li>
+
 
 <li>  A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods (6 hours) <br>
 Event:   <a          href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT 2019 Summer School</a>, Berlin, Germany, August 2019 <br>
