--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -52,6 +52,13 @@
 
 <h1>Video Talks</h1>
 
+
+
+<p>
+<a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">ProxSkip: Yes! Local gradient steps provably lead to communication acceleration! Finally!</a> (71 mins)
+<br> <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2022">Federated Learning One World Seminar</a>, 5/2022
+</p>
+
 <p>
 <a href="https://recorder-v3.slideslive.com/?share=64408&s=28e788a7-dbab-47c8-b882-f2381c5d7689">Permutation compressors for provably faster distributed nonconvex optimization</a> (5 mins)
 <br> ICLR video talk, 3/2022
