--- a/index.html
+++ b/index.html
@@ -44,6 +44,94 @@
         <div id="content">
 
 
+<h3>May 15, 2022</h3>
+
+<h1>Five Papers Accepted to ICML 2022</h1>
+<br>
+
+We've had several several papers accepted to the <a href="https://icml.cc/Conferences/2022/">International Conference on Machine Learning (ICML 2022).</a>
+Here they are:<br><br>
+
+
+<b> 1) "Proximal and Federated Random Reshuffling"</b> <a href="https://arxiv.org/abs/2102.06704">[arXiv]</a> <a href="https://www.youtube.com/watch?v=hsGty6dPAKU">[video]</a>  -
+joint work with
+<a href="https://konstmish.github.io">Konstantin Mishchenko</a> and
+<a href="https://rka97.github.io">Ahmed Khaled</a>.
+
+<br>
+<br>
+<br>
+
+<b> 2) "FedNL: Making Newton-Type Methods Applicable to Federated Learning"</b>
+<a href="https://arxiv.org/abs/2106.02969">[arXiv]</a> <a href="https://www.youtube.com/watch?v=_VYCEWT17R0">[video]</a>  -
+joint work with
+<a href="https://mher-safaryan.github.io/">Mher Safaryan</a>,
+<a href="https://rustem-islamov.github.io/">Rustem Islamov</a>, and
+<a href="https://qianxunk.github.io/">Xun Qian</a>.
+
+<br>
+<br>
+<br>
+
+<b> 3) "A Convergence Theory for SVGD in the Population Limit under Talagrand's Inequality T1"</b>
+<a href="https://arxiv.org/abs/2106.03076">[arXiv]</a>  -
+joint work with
+<a href="https://lukangsun.github.io">Lukang Sun</a> and
+<a href="https://adil-salim.github.io">Adil Salim</a>.
+
+<br>
+<br>
+<br>
+
+<b> 4) "ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!"</b>
+<a href="https://arxiv.org/abs/2202.09357">[arXiv]</a> <a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">[video]</a> -
+joint work with
+<a href="https://konstmish.github.io">Konstantin Mishchenko</a>,
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>, and
+<a href="https://www.sstich.ch">Sebastian Stich</a>.
+
+<br>
+<br>
+<br>
+
+<b> 5) "3PC: Three Point Compressors for Communication-Efficient Distributed Training and a Better Theory for Lazy Aggregation"</b>
+<a href="https://arxiv.org/abs/2202.00998">[arXiv]</a>  -
+joint work with
+<a href="https://cemse.kaust.edu.sa/amcs/people/person/igor-sokolov">Igor Sokolov</a>,
+<a href="https://ai.ethz.ch/people/ilyas-fatkhullin.html">Ilyas Fatkhullin</a>, 
+<a href="https://elnurgasanov.com">Elnur Gasanov</a>,
+<a href="https://zhizeli.github.io">Zhize Li</a>, and
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>May 15, 2022</h3>
+
+<h1>Stochastic Numerics and Statistical Learning Workshop</h1>
+
+Today I gave a talk at <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">"Stochastic Numerics and Statistical
+  Learning: Theory and Applications Workshop"</a>.
+  I spoke about <a href="https://arxiv.org/abs/2202.09357">ProxSkip paper</a> [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>]
+  [<a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">video</a>]. The good news from today is that the paper got accepted
+  to ICML.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>May 10, 2022</h3>
