--- a/i_papers.html
+++ b/i_papers.html
@@ -505,7 +505,7 @@
           [121] Samuel Horváth, Lihua Lei, Peter Richtárik and Michael I. Jordan<br>
           <b>Adaptivity of stochastic gradient methods for nonconvex optimization</b><br>
           <a href="https://opt-ml.org/papers/2020/paper_50.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
-          To appear in SIAM Journal on Mathematics of Data Science (SIMODS), 2022 <br>
+          <a href="https://epubs.siam.org/doi/abs/10.1137/21M1394308">SIAM Journal on Mathematics of Data Science 4(2):634--648, 2022</a> <br>
           [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_50.pdf">poster</a>] <br>
           <br>
 
