--- a/i_papers.html
+++ b/i_papers.html
@@ -89,14 +89,14 @@
           [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
           <br>
 
-          [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li and Eduard Gorbunov <br>
+          [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li and Eduard Gorbunov<br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
           39th International Conference on Machine Learning (ICML 2022)<br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
 
-          [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi <br>
+          [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi<br>
           <b>BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2201.13320">arXiv</a>] [code: BEER] <br>
@@ -447,6 +447,7 @@
 
           [130] Adil Salim, Laurent Condat, Konstantin Mishchenko, and Peter Richtárik <br>
           <b>Dualize, split, randomize: fast nonsmooth optimization algorithms</b><br>
+          to appear in Journal of Optimization Theory and Applications <br>
           <a href="https://opt-ml.org/papers/2020/paper_54.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_54.pdf">poster</a>] [code: PDDY, SPDDY, SPD3O, SPAPC] <br>
           <br>
@@ -704,13 +705,13 @@
 
           [92] Adel Bibi, El Houcine Bergou, Ozan Sener, Bernard Ghanem and Peter Richtárik<br>
           <b>A stochastic derivative-free optimization method with importance sampling</b><br>
-          <a href="https://aaai.org/Conferences/AAAI-20/">34th AAAI Conference on Artificial Intelligence</a> (AAAI-20)<br>
+          <a href="https://aaai.org/Conferences/AAAI-20/">34th AAAI Conference on Artificial Intelligence (AAAI 2020)</a> <br>
           [<a href="https://arxiv.org/abs/1902.01272">arXiv</a>] [code: STP_IS]<br>
           <br>
 
           [91] Konstantin Mishchenko, Filip Hanzely and Peter Richtárik<br>
           <b>99% of distributed optimization is a waste of time: the issue and how to fix it</b><br>
-          To appear in: Uncertainty in Artificial Intelligence, 2020 (UAI 2020) <br>
+          <a href="https://www.auai.org/~w-auai/uai2020/proceedings/404_main_paper.pdf">36th Conference on Uncertainty in Artificial Intelligence (UAI 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1901.09437">arXiv</a>] [code:  IBCD, ISAGA, ISGD, IASGD, ISEGA]<br>
           <br>
@@ -770,7 +771,7 @@
 
           [82] Filip Hanzely and Peter Richtárik<br>
           <b>Accelerated coordinate descent with arbitrary sampling and best rates for minibatches<br>
-          </b><a href="http://proceedings.mlr.press/v89/hanzely19a.html">Proceedings of the 22nd Int. Conf. on Artificial Intelligence and Statistics, PMLR 89:304-312, 2019</a><br>
+          </b><a href="http://proceedings.mlr.press/v89/hanzely19a.html">22nd International Conference on Artificial Intelligence and Statistics (2019</a><br>
           [<a href="https://arxiv.org/abs/1809.09354">arXiv</a>] [<a
             href="posters/Poster-ACD.pdf">poster</a>] [code: ACD]<br>
           <br>
@@ -829,7 +830,7 @@ src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/i
 
           [75] Aritra Dutta, Filip Hanzely and Peter Richtárik <br>
           <b>A nonconvex projection method for robust PCA</b><br>
-          <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/3959">The Thirty-Third AAAI Conference on Artificial Intelligence, 2019</a> (AAAI-19)<br>
+          <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/3959">33rd AAAI Conference on Artificial Intelligence (AAAI 2019)</a> <br>
           [<a href="https://arxiv.org/abs/1805.07962">arXiv</a>]<br>
           <br>
 
@@ -878,7 +879,7 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
 
           [68] Dmitry Kovalev, Eduard Gorbunov, Elnur Gasanov and Peter Richtárik<br>
            <b>Stochastic spectral and conjugate descent methods</b><br>
-          <a href="https://papers.nips.cc/paper/7596-stochastic-spectral-and-conjugate-descent-methods">Advances in Neural Information Processing Systems 31:3358-3367, 2018</a><br>
+          <a href="https://papers.nips.cc/paper/7596-stochastic-spectral-and-conjugate-descent-methods">32nd Conference on Neural Information Processing Systems (NeurIPS 2018)</a><br>
           [<a href="https://arxiv.org/abs/1802.03703">arXiv</a>] [<a
             href="posters/Poster-SSCD.pdf">poster</a>] [code: SSD,
           SconD, SSCD, mSSCD, iSconD, iSSD] <br>
@@ -886,7 +887,7 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
 
           [67] Radoslav Harman, Lenka Filová and Peter Richtárik <b><br>
             A randomized exchange algorithm for computing optimal approximate designs of experiments</b><br>
-          <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1546588">Journal of the American Statistical Association</a><br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1546588">Journal of the American Statistical Association, 2020</a><br>
           [<a href="https://arxiv.org/abs/1801.05661">arXiv</a>] [code: REX, <a href="https://optdesign.shinyapps.io/od_rex/">OD_REX</a>,
           <a href="https://optdesign.shinyapps.io/mvee_rex/">MVEE_REX</a>]<br>
           <br>
