--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
         <div id="content">
 
 
+
+<h3>May 30, 2022</h3>
+
+<h1>Teaching in Vienna</h1>
+
+During May 30-June 3, I am teaching a course on <a href="https://ufind.univie.ac.at/en/course.html?lv=390015&semester=2022S">Stochastic
+Gradient Descent Methods</a> at the <a href="https://vgsco.univie.ac.at">Vienna Graduate School of Computational Optimization (VGSCO).</a>
+About 20 PhD students, postdocs and even some professors from 4 Austrian universities (U Wien, IST Austria, TU Wien, WU Wien) are attending.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>May 15, 2022</h3>
 
 <h1>Five Papers Accepted to ICML 2022</h1>
@@ -98,7 +116,7 @@ joint work with
 <a href="https://arxiv.org/abs/2202.00998">[arXiv]</a>  -
 joint work with
 <a href="https://cemse.kaust.edu.sa/amcs/people/person/igor-sokolov">Igor Sokolov</a>,
-<a href="https://ai.ethz.ch/people/ilyas-fatkhullin.html">Ilyas Fatkhullin</a>, 
+<a href="https://ai.ethz.ch/people/ilyas-fatkhullin.html">Ilyas Fatkhullin</a>,
 <a href="https://elnurgasanov.com">Elnur Gasanov</a>,
 <a href="https://zhizeli.github.io">Zhize Li</a>, and
 <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
