--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,12 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [190] Alexander Tyurin and Peter Richtárik<br>
+          <b>A computation and communication efficient method for distributed nonconvex problems in the partial participation setting</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2205.15580">arXiv</a>] [code: DASHA-PP, DASHA-PP-PAGE, DASHA-PP-FINITE-MVR, DASHA-PP-MVR] <br>
+          <br>
+
           [189] Laurent Condat, Kai Yi and Peter Richtárik<br>
           <b>EF-BV: A unified theory of error feedback and variance reduction mechanisms for biased and unbiased compression in distributed optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
