--- a/index.html
+++ b/index.html
@@ -44,6 +44,33 @@
         <div id="content">
 
 
+<h3>May 31, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2205.15580">
+"A Computation and Communication Efficient Method for Distributed Nonconvex Problems in the Partial Participation Setting"</a> -
+joint work with
+<a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+We present a new method that includes three key components of distributed optimization and federated learning: variance reduction of stochastic gradients, compressed communication, and partial participation. We prove that the new method has optimal oracle complexity and state-of-the-art communication complexity in the partial participation setting. Moreover, we observe that "1 + 1 + 1 is not 3": by mixing variance reduction of stochastic gradients with compressed communication and partial participation, we do not obtain a fully synergetic effect. We explain the nature of this phenomenon, argue that this is to be expected, and propose possible workarounds.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 
 <h3>May 30, 2022</h3>
 
