--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,17 @@
 
           <h1> Prepared in 2022 </h1>
 
+
+          [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
+          <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
+          [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
+          <br>
+
+          [191] Lukang Sun, Avetik Karagulyan and Peter Richtárik<br>
+          <b>Convergence of Stein variational gradient descent under a weaker smoothness condition</b><br>
+          [<a href="https://arxiv.org/abs/2206.00508">arXiv</a>] [code: SVGD] <br>
+          <br>
+
           [190] Alexander Tyurin and Peter Richtárik<br>
           <b>A computation and communication efficient method for distributed nonconvex problems in the partial participation setting</b><br>
           <span class="important">Federated Learning Paper</span><br>
