--- a/index.html
+++ b/index.html
@@ -44,6 +44,75 @@
         <div id="content">
 
 
+
+<h3>June 1, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.00529">
+"Variance Reduction is an Antidote to Byzantines: Better Rates, Weaker Assumptions and Communication Compression as a Cherry on the Top"</a> -
+joint work with
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>, <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://gauthiergidel.github.io">Gauthier Gidel</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Byzantine-robustness has been gaining a lot of attention due to the growth of the interest in collaborative and federated learning.
+However, many fruitful directions, such as the usage of variance reduction for achieving robustness and communication compression
+for reducing communication costs, remain weakly explored in the field. This work addresses this gap and proposes Byz-VR-MARINA --
+a new Byzantine-tolerant method with variance reduction and compression. A key message of our paper is that variance reduction is
+key to fighting Byzantine workers more effectively. At the same time, communication compression is a bonus that makes the process
+more communication efficient. We derive theoretical convergence guarantees for Byz-VR-MARINA outperforming previous state of the art
+for general non-convex and Polyak-Lojasiewicz loss functions. Unlike the concurrent Byzantine-robust methods with variance reduction
+and/or compression, our complexity results are tight and do not rely on restrictive assumptions such as boundedness of the gradients
+or limited compression. Moreover, we provide the first analysis of a Byzantine-tolerant method supporting non-uniform sampling of
+stochastic gradients. Numerical experiments corroborate our theoretical findings.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>June 1, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.00508">
+"Convergence of Stein Variational Gradient Descent under a Weaker Smoothness Condition"</a> -
+joint work with
+<a href="https://lukangsun.github.io">Lukang Sun</a> and <a href="https://avetx.github.io">Avetik Karagulyan</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Stein Variational Gradient Descent (SVGD) is an important alternative to the Langevin-type algorithms for sampling from probability
+distributions of the form π(x)∝exp(−V(x)). In the existing theory of Langevin-type algorithms and SVGD, the potential function V is
+often assumed to be L-smooth. However, this restrictive condition excludes a large class of potential functions such as polynomials
+of degree greater than 2. Our paper studies the convergence of the SVGD algorithm for distributions with (L0,L1)-smooth potentials.
+This relaxed smoothness assumption was introduced by Zhang et al. [2019a] for the analysis of gradient clipping algorithms. With the
+help of trajectory-independent auxiliary conditions, we provide a descent lemma establishing that the algorithm decreases the KL divergence
+at each iteration and prove a complexity bound for SVGD in the population limit in terms of the Stein Fisher information.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>May 31, 2022</h3>
 
 <h1>New Paper</h1>
