--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,10 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [193] Lukang Sun, Adil Salim and Peter Richtárik<br>
+          <b>Federated learning with a sampling algorithm under isoperimetry</b><br>
+          [<a href="https://arxiv.org/abs/2206.00920">arXiv</a>] [code: Langevin-Marina] <br>
+          <br>
 
           [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
