--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
         <div id="content">
 
 
+<h3>June 2, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.00920">
+"Federated Learning with a Sampling Algorithm under Isoperimetry"</a> -
+joint work with
+<a href="https://lukangsun.github.io">Lukang Sun</a> and <a href="https://adil-salim.github.io">Adil Salim</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Federated learning uses a set of techniques to efficiently distribute the training of a machine learning algorithm across several devices, who own the training data. These techniques critically rely on reducing the communication cost -- the main bottleneck -- between the devices and a central server. Federated learning algorithms usually take an optimization approach: they are algorithms for minimizing the training loss subject to communication (and other) constraints. In this work, we instead take a Bayesian approach for the training task, and propose a communication-efficient variant of the Langevin algorithm to sample a posteriori. The latter approach is more robust and provides more knowledge of the \textit{a posteriori} distribution than its optimization counterpart. We analyze our algorithm without assuming that the target distribution is strongly log-concave. Instead, we assume the weaker log Sobolev inequality, which allows for nonconvexity.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>June 1, 2022</h3>
 
